[build-system]
requires = ["setuptools>=42", "cffi>=1.0.0", 'versioneer[toml]']
build-backend = 'setuptools.build_meta'

[project]
name = 'capcalc'
description = 'capcalc is a suite of python programs used to perform coactivation pattern analysis on time series data.'
keywords = ["fMRI", "temporal dynamics"]
license = {text = "Apache Software License"}
authors = [
  { name='Blaise Frederick', email='blaise.frederick@gmail.com' },
]
readme = 'README.rst'
classifiers = [
    'Operating System :: OS Independent',
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',

[tool.black]
line-length = 99
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | get_version.py
  | versioneer.py
  | capcalc/_version.py
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "capcalc/_version.py"
versionfile_build = "capcalc/_version.py"
tag_prefix = ""
parentdir_prefix = "capcalc-"

